<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/categoryIds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:text="@string/category_ids"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/categoryId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_3sdp"
                app:layout_constraintBottom_toBottomOf="@+id/categoryIds"
                app:layout_constraintStart_toEndOf="@id/categoryIds"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/categoryNames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:text="@string/category_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoryIds" />

            <TextView
                android:id="@+id/categoryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_3sdp"
                app:layout_constraintBottom_toBottomOf="@+id/categoryNames"
                app:layout_constraintStart_toEndOf="@id/categoryNames"
                app:layout_constraintTop_toBottomOf="@id/categoryId" />

            <TextView
                android:id="@+id/amounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:text="@string/amounts"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoryNames" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="@+id/amounts"
                app:layout_constraintStart_toEndOf="@id/amounts"
                app:layout_constraintTop_toBottomOf="@id/categoryName" />

            <TextView
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:text="@string/detailss"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amounts" />

            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_7sdp"
                app:layout_constraintBottom_toBottomOf="@+id/detail"
                app:layout_constraintStart_toEndOf="@id/detail"
                app:layout_constraintTop_toBottomOf="@id/amount" />

            <TextView
                android:id="@+id/actorIds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:text="@string/actor_ids"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail" />

            <TextView
                android:id="@+id/actorId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_7sdp"
                app:layout_constraintBottom_toBottomOf="@+id/actorIds"
                app:layout_constraintStart_toEndOf="@id/actorIds"
                app:layout_constraintTop_toBottomOf="@id/detail" />

            <TextView
                android:id="@+id/dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:text="@string/dates"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/actorIds" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_7sdp"
                app:layout_constraintBottom_toBottomOf="@+id/dates"
                app:layout_constraintStart_toEndOf="@id/dates"
                app:layout_constraintTop_toBottomOf="@id/actorId" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>